--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
 setup.php
 create_products_table.php
 
+# Composer dependencies
+chat/vendor/
+vendor/
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# Temporary files
+tmp/
+temp/
+
+# Upload directories (optional - you may want to track these)
+chat/uploads/
+
