adjust readme file

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,124 @@
-# PayOS Configuration
-# Get these from your PayOS merchant dashboard
+# =============================================================================
+# VPF FASHION - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and update with your actual values
+
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+DB_HOST=localhost
+DB_NAME=first_web
+DB_USER=root
+DB_PASS=
+
+# Docker Database Configuration (when using Docker)
+# DB_HOST=db
+# DB_NAME=firstwebsite
+# DB_USER=firstwebsite_user
+# DB_PASS=secure_password123
+
+# =============================================================================
+# PAYOS PAYMENT CONFIGURATION
+# =============================================================================
+# Get these from https://payos.vn dashboard
 PAYOS_CLIENT_ID=your_payos_client_id_here
 PAYOS_API_KEY=your_payos_api_key_here
 PAYOS_CHECKSUM_KEY=your_payos_checksum_key_here
 
-# PayOS Environment (true for sandbox, false for production)
+# Set to false for production
 PAYOS_IS_SANDBOX=true
 
-# Application URLs
-# For local development
+# =============================================================================
+# EMAIL CONFIGURATION (PHPMailer)
+# =============================================================================
+# Gmail SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password-here
+SMTP_ENCRYPTION=tls
+
+# Email Settings
+FROM_EMAIL=noreply@vpffashion.com
+FROM_NAME=VPF Fashion
+SUPPORT_EMAIL=support@vpffashion.com
+
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+# Base URL of your application (no trailing slash)
 APP_BASE_URL=http://localhost/FirstWebsite
 
 # For production, change to your domain:
 # APP_BASE_URL=https://yourdomain.com
 
-# Database Configuration (if needed)
-# DB_HOST=localhost
-# DB_NAME=your_database_name
-# DB_USER=your_database_user
-# DB_PASS=your_database_password
+# Application Environment
+APP_ENV=development
+APP_DEBUG=true
+
+# =============================================================================
+# CHAT SYSTEM CONFIGURATION
+# =============================================================================
+# WebSocket Server Configuration
+WEBSOCKET_HOST=127.0.0.1
+WEBSOCKET_PORT=8080
+
+# Chat Upload Settings
+CHAT_MAX_FILE_SIZE=10485760
+CHAT_ALLOWED_EXTENSIONS=jpg,jpeg,png,gif,pdf
+
+# =============================================================================
+# SECURITY CONFIGURATION
+# =============================================================================
+# Change this to a random string for production
+APP_SECRET_KEY=your-secret-key-here
+
+# Session Configuration
+SESSION_LIFETIME=7200
+SESSION_NAME=vpf_session
+
+# Password Reset & OTP
+PASSWORD_RESET_EXPIRY=3600
+OTP_EXPIRY=300
+OTP_LENGTH=6
+
+# =============================================================================
+# UPLOAD CONFIGURATION
+# =============================================================================
+# Maximum upload size (in bytes)
+MAX_UPLOAD_SIZE=10485760
+
+# Upload directories (relative to project root)
+UPLOAD_DIR_PRODUCTS=assets/images/
+UPLOAD_DIR_CHAT=chat/uploads/
+
+# =============================================================================
+# ADMIN CONFIGURATION
+# =============================================================================
+# Default admin account (change password after first login!)
+DEFAULT_ADMIN_EMAIL=admin@vpf.com
+DEFAULT_ADMIN_PASSWORD=admin123
+
+# Admin session timeout (in seconds)
+ADMIN_SESSION_TIMEOUT=1800
+
+# =============================================================================
+# EXTERNAL SERVICES (Optional)
+# =============================================================================
+# Google Analytics
+GA_TRACKING_ID=
+
+# Facebook Pixel
+FB_PIXEL_ID=
+
+# =============================================================================
+# MAINTENANCE & RATE LIMITING
+# =============================================================================
+# Maintenance mode
+MAINTENANCE_MODE=false
+MAINTENANCE_MESSAGE=We are currently performing maintenance. Please check back soon.
+
+# Rate limiting
+API_RATE_LIMIT=60
+MAX_LOGIN_ATTEMPTS=5
+LOGIN_LOCKOUT_TIME=900
